# implementation

./: CMakeLists.txt  README.txt  admin.c  admin.h  api.c  api.h  cabinet.h  cabinet_manager.c  cabinet_manager.h  client.c  client.h  readInfo.c  readInfo.h  readme.md  server.c  server.h
client/: user.h
clientexe/: client
server/: server.h  user_manger.h
serverexe/: good.txt  server
test/: cabinet_manager_test.c
